force-app/main/default/objects/HAM_Associated_People__c/HAM_Associated_People__c.object-meta.xml
<CustomObject>
    <description>This is the Object used to store all the associated people for the Cvent event.</description>
    <label>Associated People</label>
    <nameField>
        <displayFormat>Ass-{0000000}</displayFormat>
        <label>Associated People Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated People</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>