force-app/main/default/objects/HAM_Associated_People__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the constituent associated with this event role.</description>
    <inlineHelpText>Select an existing constituent to associate with this event and assign a role. Use this field when the person already exists in the system.</inlineHelpText>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Associated_People</relationshipName>
    <type>Lookup</type>
</CustomField>