force-app/main/default/objects/HAM_Associated_People__c/fields/Cvent_Event__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event__c</fullName>
    <description>Identifies the Event record to which this person is associated.</description>
    <inlineHelpText>Select the Event for which this individual is participating or has an assigned role (e.g., speaker, presenter, moderator, sponsor, or host).</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipName>Associated_People</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>