force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Account__c.field-meta.xml
<CustomField>
    <fullName>HAM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account record associated with this speaker or sponsor, carried over from Blackthorn.</description>
    <inlineHelpText>The organization account linked to this person.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated People</relationshipLabel>
    <relationshipName>Associated_People</relationshipName>
    <type>Lookup</type>
</CustomField>