force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Active__c.field-meta.xml
<CustomField>
    <fullName>HAM_Active__c</fullName>
    <description>Indicates whether the person’s association with the event is currently active.</description>
    <formula>TODAY() &lt;=  HAM_End_Date__c</formula>
    <inlineHelpText>Automatically set to true when today’s date is on or before the End Date. The association is marked inactive after the End Date has passed.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>