force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Bio__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bio__c</fullName>
    <description>Full biography of this person carried over from Blackthorn.</description>
    <inlineHelpText>Full bio of the speaker or sponsor.</inlineHelpText>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>