force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_BT_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Source_Id__c</fullName>
    <description>Prefixed Salesforce Record ID of the originating Blackthorn record. S- prefix for speakers, SP- prefix for sponsors. Used as the External ID upsert key during migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>The prefixed ID of the source Blackthorn record. Do not edit manually — managed by the migration process.</inlineHelpText>
    <label>BT Source Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>