force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_BT_Speaker__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn speaker record. Null on sponsor records.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn speaker record.</inlineHelpText>
    <label>BT Speaker</label>
    <referenceTo>conference360__Speaker__c</referenceTo>
    <relationshipLabel>Associated People</relationshipLabel>
    <relationshipName>Associated_People</relationshipName>
    <type>Lookup</type>
</CustomField>