force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_BT_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn sponsor record. Null on speaker records.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn sponsor record.</inlineHelpText>
    <label>BT Sponsor</label>
    <referenceTo>conference360__Sponsor__c</referenceTo>
    <relationshipLabel>Associated People</relationshipLabel>
    <relationshipName>Associated_People</relationshipName>
    <type>Lookup</type>
</CustomField>