force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Company__c.field-meta.xml
<CustomField>
    <fullName>HAM_Company__c</fullName>
    <description>Company or organization name of this person carried over from Blackthorn.</description>
    <inlineHelpText>The company or organization this person represents.</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>