force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Name__c</fullName>
    <description>Display name used for sponsors on the event page, carried over from Blackthorn.</description>
    <inlineHelpText>The name displayed publicly for this sponsor on the event page.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>