force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date on which this person’s association with the event ends.</description>
    <inlineHelpText>Enter the date when this individual’s role or participation ends. This may differ from the event end date for multi-day events (e.g., a speaker scheduled for a single day).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>