force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_First_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_First_Name__c</fullName>
    <description>First name of this person carried over from Blackthorn.</description>
    <inlineHelpText>First name of the speaker or sponsor.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>