force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Hide_On_Page__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hide_On_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this person should be hidden on the public event page, carried over from Blackthorn.</description>
    <inlineHelpText>Check to hide this speaker or sponsor from the public event page.</inlineHelpText>
    <label>Hide On Page</label>
    <type>Checkbox</type>
</CustomField>