force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Image_URL__c</fullName>
    <description>URL of the headshot or logo image for this person, carried over from Blackthorn.</description>
    <inlineHelpText>Link to the profile image or sponsor logo.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>