force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_Name__c</fullName>
    <description>Last name of this person carried over from Blackthorn.</description>
    <inlineHelpText>Last name of the speaker or sponsor.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>