force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>HAM_LinkedIn__c</fullName>
    <description>LinkedIn profile URL for this person, carried over from Blackthorn.</description>
    <inlineHelpText>LinkedIn profile link for the person.</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>