force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Notes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Notes__c</fullName>
    <description>Internal notes for this person carried over from Blackthorn.</description>
    <inlineHelpText>Any internal notes about this speaker or sponsor.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>