force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_Phone__c</fullName>
    <description>Phone number of this person carried over from Blackthorn.</description>
    <inlineHelpText>Contact phone number for the speaker or sponsor.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>