force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Role__c.field-meta.xml
<CustomField>
    <fullName>HAM_Role__c</fullName>
    <description>Defines the role this person has in relation to the event.</description>
    <inlineHelpText>Select the role that best describes this individual’s involvement in the event (e.g., Speaker, Host, Moderator, Presenter, or Sponsor).</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Presenter</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>