force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the HAM event session this associated person (speaker/sponsor) is linked to.</description>
    <inlineHelpText>The event session this person is associated with.</inlineHelpText>
    <label>Session</label>
    <referenceTo>HAM_Event_Session__c</referenceTo>
    <relationshipLabel>Associated People</relationshipLabel>
    <relationshipName>Associated_People</relationshipName>
    <type>Lookup</type>
</CustomField>