force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Short_Bio__c.field-meta.xml
<CustomField>
    <fullName>HAM_Short_Bio__c</fullName>
    <description>Short biography of this person carried over from Blackthorn.</description>
    <inlineHelpText>Brief bio used in event programs or listings.</inlineHelpText>
    <label>Short Bio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>