force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Speaker_Visibility__c.field-meta.xml
<CustomField>
    <fullName>HAM_Speaker_Visibility__c</fullName>
    <description>Controls speaker visibility level on the event page. Migrated from conference360__Speaker__c.conference360__Speaker_Visibility__c</description>
    <inlineHelpText>Speaker&apos;s visibility on the Blackthorn event page: Featured (highlighted), Shown on Listing (standard), or Hidden (not displayed).</inlineHelpText>
    <label>Speaker Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Featured</fullName>
            </value>
            <value>
                <fullName>Shown on Listing</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>