force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Sponsor_Tier__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sponsor_Tier__c</fullName>
    <description>Sponsorship tier for this sponsor, carried over from Blackthorn. Applies to sponsor records only.</description>
    <inlineHelpText>The sponsorship level for this sponsor. Blank for speaker records.</inlineHelpText>
    <label>Sponsor Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>