force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date on which this person’s association with the event begins.</description>
    <inlineHelpText>Enter the date when this individual’s role or participation starts. This may differ from the event start date for multi-day events (e.g., a speaker scheduled for a single day).</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>