force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Twitter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Twitter__c</fullName>
    <description>Twitter profile URL for this person, carried over from Blackthorn.</description>
    <inlineHelpText>Twitter profile link for the person.</inlineHelpText>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>