force-app/main/default/objects/HAM_Associated_People__c/fields/HAM_Website__c.field-meta.xml
<CustomField>
    <fullName>HAM_Website__c</fullName>
    <description>Website URL for this person or organization, carried over from Blackthorn.</description>
    <inlineHelpText>Personal or company website for the speaker or sponsor.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>