force-app/main/default/objects/HAM_Associated_People__c/recordTypes/Content_Role.recordType-meta.xml
<RecordType>
    <fullName>Content_Role</fullName>
    <active>true</active>
    <description>Used for Speakers, Presenters, and Moderators.</description>
    <label>Content Role</label>
</RecordType>