force-app/main/default/objects/HAM_Associated_People__c/recordTypes/VIP_Role.recordType-meta.xml
<RecordType>
    <fullName>VIP_Role</fullName>
    <active>true</active>
    <description>Used for Hosts and Sponsors.</description>
    <label>VIP Role</label>
</RecordType>